# Bengali-Plagiarism-Checker-pip

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
src/BengaliPlagiarismChecker/: __init__.py
src/BengaliPlagiarismCheckerTool.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
