[metadata]
name = BengaliPlagiarismCheckerTool
version = 0.0.2
author = Satyajit Ghosh
author_email = satyajit.ghosh@outlook.in
description = A package for plagiarism detection on Bengali texts. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SATYAJIT1910/Bengali-Plagiarism-Checker-pip
project_urls =
    Bug Tracker = https://github.com/SATYAJIT1910/Bengali-Plagiarism-Checker-pip/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved
    Operating System :: OS Independent
    Natural Language :: Bengali
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
[options.packages.find]
where = src